# readme-py

./: .gitignore  README.md  TEST.md  flake.nix  footer.md  header.md  pyproject.toml
.github/workflows/: check.yml  pytest.yml  readme.yml  test.yml  update.yml
app/: __init__.py  __main__.py  readme.py
test/: __main__.py  test_git_tracked_dir.py  test_run_command.py  test_strip_ansi_sequences.py
